Criação do CRUD - (Finalizando o update)

--- a/BusinessManager/src/main/webapp/WEB-INF/web.xml
+++ b/BusinessManager/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,10 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <session-config>
+  <!-- Disables URL-based sessions (no more 'jsessionid' in the URL using Tomcat) -->
+  <tracking-mode>COOKIE</tracking-mode>
+</session-config>
 </web-app>
+
